--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="header">
-  <nav class="header_logo" [routerLink]="['/']">
+  <nav class="header_logo" [routerLink]="['/home']">
     <img src="./assets/facebook-black.png" alt="facebook">
   </nav>
   <div class="header_navbar">
-    <nav routerLinkActive="active" [routerLink]="['/']" [routerLinkActiveOptions]="{exact: true}">
+    <nav routerLinkActive="active" [routerLink]="['/home']" [routerLinkActiveOptions]="{exact: true}">
       <svg viewBox="0 0 28 28" class="x1lliihq x1k90msu x2h7rmj x1qfuztq x5e5rjt" fill="currentColor" height="28"
            width="28">
         <path
