--- a/src/app/main/blogs-page/blogs-group/blogs-group.component.scss
+++ b/src/app/main/blogs-page/blogs-group/blogs-group.component.scss
@@ -1,31 +1,76 @@
 .blog{
   display: flex;
   flex-direction: column;
-  .blog_inner{
-    margin-bottom: 30px;
-    padding: 15px;
-    width: 880px;
+  width: 75%;
+  margin: 0 auto;
+  .blog_id{
+    width: 100%;
+    height: 220px;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    border: 1px solid black;
-    border-radius: 15px;
-    .blog_inner_data{
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      .blog_inner_log{
-        font-size: 1.2rem;
-      }
-      small{
-        font-size: 0.6rem;
-      }
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    border-width: 6px;
+    border-style: solid;
+    border-image: linear-gradient(to right, #ffffff, #ffffff) 1;
+    &_title{
+      font-weight: bold;
+      font-size: 1.2rem;
+    }
+    &_more{
+      opacity: 0;
+      color: white;
+      cursor: pointer;
+      background-image: linear-gradient(to left, #0652DD, #9980FA, #FDA7DF);
+      padding: 10px;
+      border-radius: 7px;
+      background-size: 200%;
+      transition: 0.5s all;
+      animation: animrev 0.5s;
+    }
+  }
+  .blog_id:hover{
+    transition: all 0.5s;
+    border-width: 6px;
+    border-style: solid;
+    border-image: linear-gradient(to right, darkblue, darkorchid) 1;
+    .blog_id_more{
+      animation: anim 0.5s;
+      opacity: 1;
+    }
+    .blog_id_more:hover{
+      background-position: right;
     }
   }
 }
 
-.loading{
-  z-index: -5;
+.blog_content {
   position: absolute;
-  top: 250px;
-  left: 45%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: #7c7b7b;
+}
+@keyframes anim {
+  from{
+    transform: translateY( 50px);
+    opacity: 0;
+  }
+  to{
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes animrev {
+  from{
+    transform: translateY( 0px);
+    opacity: 1;
+  }
+  to{
+    transform: translateY(50px);
+    opacity: 0;
+  }
 }
