--- a/src/app/main/blogs-page/photos-block/photos-block.component.scss
+++ b/src/app/main/blogs-page/photos-block/photos-block.component.scss
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-evenly;
   height: 100%;
+  width: 100%;
   .photos_blocs{
     padding: 5px;
-    max-width: 240px;
-    height: 240px;
+    max-width: 300px;
+    height: 300px;
     img{
       width: 100%;
       height: 100%;
@@ -15,9 +17,3 @@
 }
 
 
-.loading{
-  position: absolute;
-  z-index: -5;
-  top: 250px;
-  left: 45%;
-}
