--- a/src/app/main/blogs-page/share/component/blog-info/blog-info.component.scss
+++ b/src/app/main/blogs-page/share/component/blog-info/blog-info.component.scss
@@ -1,27 +1,91 @@
-.blog_info{
-  width: 974px;
-  margin: 0 auto;
-  .blog_info_inner{
+.blog_content{
+  animation: open 0.7s;
+  z-index: 9999;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  overflow-y: scroll;
+  background: #e7e7e7;
+  height: 100vh;
+  .blog_content_inner{
     display: flex;
+    width: 70%;
+    margin: 0 auto;
     flex-direction: column;
-    .blog_info_inner_main{
+    &_header{
       display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      padding: 0 10px;
-      h1{
-        font-size: 1.4rem;
+      flex-direction: column;
+      &_image{
+        height: 350px;
+        img{
+          width: 100%;
+          height: 100%;
+        }
       }
-      span{
-        font-size: 0.7rem;
+      &_back{
+        margin-top: 15px;
+        background-color: black;
+        color: white;
+        font-size: 1.3rem ;
+        cursor: pointer;
+        border: 1px solid white;
+        padding-block: 10px;
+        padding-inline: 15px;
+      }
+      &_back:hover{
+        background-color: white;
+        color: black;
+        transition: all 0.5s ease-in;
+        border: 1px solid black;
+      }
+      &_loft{
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+    }
+    &_main{
+      margin:50px auto 0;
+      display: flex;
+      width: 80%;
+      align-items: center;
+      flex-direction: column;
+      &_title{
+        font-size: 1.8rem;
+        padding-bottom: 20px;
       }
     }
   }
 }
 
-.loading{
-  position: absolute;
-  z-index: -5;
-  top: 250px;
-  left: 45%;
+
+@keyframes open {
+  from{
+    transform: translateY(1800px);
+    opacity: 0;
+  }
+  to{
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.blog_content::-webkit-scrollbar {
+  width: 10px;
+}
+.blog_content::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 5px;
+}
+
+.blog_content::-webkit-scrollbar-thumb {
+  background: #8c8a8a;
+  border-radius: 5px;
+}
+
+.blog_content::-webkit-scrollbar-thumb:hover {
+  background: #7c7b7b;
 }
