--- a/src/app/main/user-account/edit/edit.component.scss
+++ b/src/app/main/user-account/edit/edit.component.scss
@@ -4,6 +4,7 @@
   width: 40%;
   margin: 0 auto;
   &_inner{
+    overflow: auto;
     background-color: white;
     margin-top: 75px;
     border-radius: 15px;
@@ -29,12 +30,17 @@
       flex-direction: column;
       justify-content: space-between;
       &_photo{
-        margin: 20px 0;
+        margin: 25px 0;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        &_header{
+          font-size: 1.2rem;
+          font-weight: 600;
+        }
         &_change{
           cursor: pointer;
+          text-decoration: underline ;
         }
       }
       &_photome{
@@ -61,6 +67,45 @@
             width: 100%;
             height: 100%;
           }
+        }
+      }
+      &_about{
+        &_info{
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+        }
+        &_change{
+          &_close{
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+
+          }
+        }
+      }
+      .loft{
+        margin: 20px 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        &_save{
+          cursor: pointer;
+          padding-block: 10px;
+          padding-inline: 20px;
+          background-color: black;
+          color: white;
+          font-weight: 600;
+          font-size: 0.9rem;
+        }
+        &_compleate{
+          cursor: pointer;
+          padding-block: 10px;
+          padding-inline: 20px;
+          background-color: #8a8989;
+          font-weight: 600;
+          font-size: 0.9rem;
         }
       }
     }
