--- a/src/app/main/blogs-page/share/component/blog-info/blog-info.component.html
+++ b/src/app/main/blogs-page/share/component/blog-info/blog-info.component.html
@@ -14,10 +14,10 @@
     </div>
     <div class="blog_content_inner_main">
       <h3 class="blog_content_inner_main_title">{{blog.title}}</h3>
-      <nav>
+      <nav class="blog_content_inner_main_image">
         <img src="{{blog.img}}" alt="">
       </nav>
-      <nav>{{blog.body}}</nav>
+      <nav class="blog_content_inner_main_txt"> {{blog.body}}</nav>
     </div>
   </div>
 </div>
