--- a/src/app/main/error-page/error-page.component.html
+++ b/src/app/main/error-page/error-page.component.html
@@ -5,7 +5,7 @@
     <nav class="error_content_inner">0</nav>
     <nav class="error_content_inner">4</nav>
   </div>
-  <div [routerLink]="['/']" class="error_left">
+  <div (click)="toHome()" class="error_left">
     Go Home
   </div>
 </div>
