--- a/src/app/main/blogs-page/blogs-page.component.scss
+++ b/src/app/main/blogs-page/blogs-page.component.scss
@@ -4,6 +4,9 @@
   align-items: flex-start;
   flex-direction: column;
   animation: open 0.7s ;
+  @media (max-width: 920px){
+    margin: 0 15px;
+  }
   .blog_log_choice{
     position: fixed;
     background-color: white;
@@ -13,19 +16,17 @@
     box-shadow: 3px 10px 15px #c5bdbd;
     display: flex;
     flex-direction: row;
-    @media (max-width: 980px) {
+    @media (max-width: 920px) {
       left: 25%;
     }
     @media (max-width: 720px) {
-      max-width: 320px;
-      flex-wrap: wrap;
-      left: 15%;
+      left: 5%;
     }
     .blog_log_choice_type{
       padding: 5px 15px;
       cursor: pointer;
-      @media (max-width: 720px) {
-        margin-bottom: 15px;
+      @media (max-width: 475px) {
+        font-size: 0.8rem;
       }
     }
     .blog_log_choice_type:hover{
