--- a/src/app/main/blogs-page/photos-block/photos-block.component.scss
+++ b/src/app/main/blogs-page/photos-block/photos-block.component.scss
@@ -9,6 +9,14 @@
     padding: 5px;
     max-width: 300px;
     height: 300px;
+    @media (max-width: 1124px) {
+      max-width: 30%;
+      height: 240px;
+    }
+    @media (max-width: 720px) {
+      max-width: 300px;
+      height: 300px;
+    }
     img{
       width: 100%;
       height: 100%;
