--- a/src/app/main/blogs-page/share/component/blog-info/blog-info.component.scss
+++ b/src/app/main/blogs-page/share/component/blog-info/blog-info.component.scss
@@ -12,13 +12,22 @@
   .blog_content_inner{
     display: flex;
     width: 70%;
-    margin: 0 auto;
+    margin: 0 auto 50px;
     flex-direction: column;
+    @media (max-width: 1124px) {
+      width: 80%;
+    }
+    @media (max-width: 720px) {
+      width: 95%;
+    }
     &_header{
       display: flex;
       flex-direction: column;
       &_image{
         height: 350px;
+        @media (max-width: 475px) {
+          height: 250px;
+        }
         img{
           width: 100%;
           height: 100%;
@@ -53,9 +62,27 @@
       width: 80%;
       align-items: center;
       flex-direction: column;
+      @media (max-width: 720px) {
+        width: 95%;
+      }
       &_title{
         font-size: 1.8rem;
         padding-bottom: 20px;
+        @media (max-width: 475px) {
+          font-size: 1.3rem;
+        }
+      }
+      &_image{
+        img{
+          width: 100%;
+          height: auto;
+          object-fit: cover;
+        }
+      }
+      &_txt{
+        @media (max-width: 475px) {
+          font-size: 0.85rem;
+        }
       }
     }
   }
