--- a/src/app/main/blogs-page/share/component/image-block/image-block.component.scss
+++ b/src/app/main/blogs-page/share/component/image-block/image-block.component.scss
@@ -34,6 +34,9 @@
     margin: 50px auto;
     position: sticky;
     top: 15%;
+    @media (max-width: 720px) {
+      max-width: 95%;
+    }
     .image_active{
       width: 100%;
       height: 100%;
