--- a/src/app/main/home-page/home-page.component.scss
+++ b/src/app/main/home-page/home-page.component.scss
@@ -2,12 +2,23 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
+  @media (max-width: 560px) {
+    flex-direction: column;
+    align-items: center;
+  }
   app-auth-info {
     width: 15%;
     display: flex;
     @media (max-width: 1100px) {
-      display: none;
+      width: 8%
+    }
+    @media (max-width: 768px) {
+      width: 14%
+    }
+    @media (max-width: 560px) {
+      width: 100%;
+      height: 6vh;
+      border-bottom: 1px solid;
     }
   }
 
@@ -26,7 +37,6 @@
     width: 20%;
     @media (max-width: 1100px) {
       width: 25%;
-      margin: 0 auto;
     }
     @media (max-width: 768px) {
       display: none;
