--- a/src/app/main/user-account/friends/friends.component.scss
+++ b/src/app/main/user-account/friends/friends.component.scss
@@ -10,6 +10,9 @@
     .friends_head_log{
       font-size: 1.5rem;
       font-weight: 600;
+      @media (max-width: 575px) {
+        font-size: 1.2rem;
+      }
     }
     .friends_main_navbar{
       display: flex;
@@ -26,6 +29,9 @@
       &_inner{
         padding: 9px;
         cursor: pointer;
+        @media (max-width: 575px) {
+          font-size: 0.8rem;
+        }
       }
     }
   }
