--- a/src/app/main/user-account/friends/me-friend/components/friend/friend.component.scss
+++ b/src/app/main/user-account/friends/me-friend/components/friend/friend.component.scss
@@ -1,46 +1,43 @@
-.all {
-  width: 75%;
-  margin: 0 auto;
+.all{
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-
   .friends_main_people_inner {
+    display: flex;
+    justify-content: space-between;
     flex-basis: 45%;
+    flex-direction: row;
+    align-items: center;
     border: 1px solid #adadad;
     padding: 15px 12px;
     margin-bottom: 20px;
     border-radius: 15px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     position: relative;
-    justify-content: space-between;
-
+    @media (max-width: 575px) {
+      flex-basis: 95%;
+    }
     .people_inner_info {
       display: flex;
       flex-direction: row;
       align-items: center;
-
+      .favourite{
+        border: 3px solid red;
+        border-radius: 15px;
+      }
       img {
         cursor: pointer;
-        border-radius: 5px;
-        padding-right: 15px;
+        border-radius: 15px;
       }
 
       h4 {
+        padding-left: 15px;
         cursor: pointer;
       }
     }
     .people_find{
       cursor: pointer;
-      padding: 7px;
-      border-radius: 15px;
-    }
-    .people_find:hover{
-      transition: all 0.6s;
-      background-color: #b4aeae;
     }
   }
 }
