--- a/src/app/main/user-account/friends/me-friend/components/photo/photo.component.scss
+++ b/src/app/main/user-account/friends/me-friend/components/photo/photo.component.scss
@@ -1,6 +1,4 @@
 .all_photo{
-  width: 75%;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   .photos{
@@ -37,6 +35,12 @@
       padding: 10px;
       border-radius: 20px;
       background-color: #e5e5e5;
+      @media (max-width: 920px) {
+        right: 10%;
+      }
+      @media (max-width: 575px) {
+        right: 20%;
+      }
       img{
         width: 28px;
         height: auto;
@@ -46,7 +50,7 @@
       position: relative;
       right: 11%;
       top: 17%;
-      height: 45px;
+      height: 90px;
       background-color: #e5e5e5;
       padding: 8px;
       border-radius: 20px;
