--- a/src/app/main/user-account/publication/me-blog/me-blog.component.scss
+++ b/src/app/main/user-account/publication/me-blog/me-blog.component.scss
@@ -12,31 +12,48 @@
   .blog_content_inner{
     display: flex;
     width: 70%;
-    margin: 0 auto;
+    margin: 0 auto 50px;
     flex-direction: column;
+    @media (max-width: 1124px) {
+      width: 80%;
+    }
+    @media (max-width: 720px) {
+      width: 95%;
+    }
     &_header{
-      height: 350px;
       display: flex;
       flex-direction: column;
-      img{
-        width: 100%;
-        height: 100%;
+      &_image{
+        height: 350px;
+        @media (max-width: 475px) {
+          height: 250px;
+        }
+        img{
+          width: 100%;
+          height: 100%;
+        }
       }
       &_back{
         margin-top: 15px;
         background-color: black;
         color: white;
         font-size: 1.3rem ;
-        width: 8%;
         cursor: pointer;
         border: 1px solid white;
-        padding: 8px;
+        padding-block: 10px;
+        padding-inline: 15px;
       }
       &_back:hover{
         background-color: white;
         color: black;
         transition: all 0.5s ease-in;
         border: 1px solid black;
+      }
+      &_loft{
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
       }
     }
     &_main{
@@ -45,9 +62,27 @@
       width: 80%;
       align-items: center;
       flex-direction: column;
+      @media (max-width: 720px) {
+        width: 95%;
+      }
       &_title{
         font-size: 1.8rem;
         padding-bottom: 20px;
+        @media (max-width: 475px) {
+          font-size: 1.3rem;
+        }
+      }
+      &_image{
+        img{
+          width: 100%;
+          height: auto;
+          object-fit: cover;
+        }
+      }
+      &_txt{
+        @media (max-width: 475px) {
+          font-size: 0.85rem;
+        }
       }
     }
   }
