--- a/src/app/shared/component/auth-info/auth-info.component.scss
+++ b/src/app/shared/component/auth-info/auth-info.component.scss
@@ -3,6 +3,9 @@
   display: flex;
   position: fixed;
   flex-direction: column;
+  @media (max-width: 1100px) {
+    display: none;
+  }
   .auth-info-me{
     padding: 5px;
     cursor: pointer;
@@ -13,6 +16,40 @@
       width: 26px;
       height: 26px;
       margin-right: 15px;
+    }
+  }
+  .auth-info-me:hover{
+    background-color: #b0b0b0;
+    border-radius: 7px;
+  }
+}
+.auth-info-mobile{
+  padding-left: 10px;
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  display: none;
+  @media (max-width: 1100px) {
+    display: flex;
+  }
+  @media (max-width: 560px) {
+    flex-direction: row;
+    background-color: white;
+    width: 100%;
+    padding: 10px 0;
+    position: fixed;
+    top: 8.5%;
+    justify-content: center;
+  }
+  .auth-info-me{
+    padding: 5px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    img{
+      width: 42px;
+      height: 42px;
     }
   }
   .auth-info-me:hover{
