--- a/src/app/shared/component/header/header.component.scss
+++ b/src/app/shared/component/header/header.component.scss
@@ -7,12 +7,17 @@
   justify-content: space-between;
   padding: 0 35px 0;
   box-shadow: 1px 16px 20px #bdbdbd;
-
+  @media (max-width: 560px) {
+    padding: 0 15px;
+  }
   .header_logo {
     align-items: center;
     display: flex;
     width: 3%;
     cursor: pointer;
+    @media (max-width: 560px) {
+      width: auto;
+    }
     img {
       width: 40px;
     }
@@ -24,7 +29,9 @@
     height: auto;
     justify-content: space-between;
     align-items: center;
-
+    @media (max-width: 560px) {
+      width: auto;
+    }
     nav {
       display: flex;
       align-items: center;
@@ -45,6 +52,7 @@
 
   .header_login {
     .header_login_inner {
+      cursor: pointer;
       align-items: center;
       display: flex;
 
@@ -54,6 +62,43 @@
         border-radius: 50%;
       }
     }
+    &_dop{
+      z-index: 99999;
+      position: fixed;
+      background-color: #dbdbdb;
+      padding: 5px;
+      right: 6%;
+      top: 0.5%;
+      @media (max-width: 1240px) {
+        right: 8%;
+      }
+      &_sett{
+        cursor: pointer;
+        font-size: 0.9rem;
+        margin-bottom: 5px;
+      }
+      &_log{
+        cursor: pointer;
+        font-size: 0.9rem;
+        margin: 5px 0 0 0;
+      }
+    }
+    &_dop:after{
+      background-color: #dbdbdb;
+      border-radius: 0 0 100% 0;
+      border-right: 0;
+      bottom: 1px;
+      content: "";
+      height: 30px;
+      margin-top: -5px;
+      margin-right: -5px;
+      position: absolute;
+      right: 0px;
+      transform: rotate(10deg);
+      width: 30px;
+      z-index: -1;
+    }
+
   }
 }
 
