--- a/src/app/shared/component/you-know-people/you-know-people.component.scss
+++ b/src/app/shared/component/you-know-people/you-know-people.component.scss
@@ -15,7 +15,9 @@
     p{
       font-size: 1.5rem;
       font-weight: 600;
-
+      @media (max-width: 575px) {
+        font-size: 1rem;
+      }
     }
     &_setting{
       display: flex;
