--- a/src/app/main/user-account/edit/edit.component.scss
+++ b/src/app/main/user-account/edit/edit.component.scss
@@ -1,8 +1,11 @@
 .edit{
   display: flex;
   height: 100vh;
-  width: 40%;
+  width: 50%;
   margin: 0 auto;
+  @media (max-width: 770px) {
+    width: 95%;
+  }
   &_inner{
     overflow: auto;
     background-color: white;
